Styling header and footer of the pages

--- a/Know Your Career App/career.html
+++ b/Know Your Career App/career.html
@@ -19,10 +19,11 @@
         </div>
         <div id="header">
             <h1>Know Your Career</h1>
+            <img src="headerpic.jpg"/>
 
         </div>
 
-        <div>
+        <div id="career">
             <h2>Career Options</h2>
 	    
 	    <p>Choose your interests and passions:<p>
