--- a/Know Your Career App/index.html
+++ b/Know Your Career App/index.html
@@ -9,16 +9,17 @@
     <div id="page-container">
 	<div id="main-nav">
 	  
-		<a href="index.html">Home</a>||
-		<a href="career.html">Career Options</a>||
-		<a href="mentor.html">Mentor</a>||
-		<a href="#">Contact Us</a>||
+		<a href="index.html">Home</a> -
+		<a href="career.html">Career Options</a> -
+		<a href="mentor.html">Mentor</a> -
+		<a href="#">Contact Us</a>
 	  
 
 
         </div>
         <div id="header">
             <h1>Know Your Career</h1>
+            <img src="headerpic.jpg"/>
 
         </div>
         <div id="sidebar-a">
