--- a/Know Your Career App/mentor.html
+++ b/Know Your Career App/mentor.html
@@ -17,12 +17,14 @@
 
 
         </div>
+
         <div id="header">
             <h1>Know Your Career</h1>
+            <img src="headerpic.jpg"/>
 
         </div>
 
-        <div>
+        <div id="mentor">
             <h2>Mentor</h2>
 	    
 	    <p>Choose your interests and passions:<p>
@@ -42,7 +44,7 @@
 
                 
 		
-	   <button>Submit Question</button>
+	   <button>Submit Question</button><br>
 
             </form>
 
