--- a/Know Your Career App/signup.html
+++ b/Know Your Career App/signup.html
@@ -19,6 +19,7 @@
         </div>
         <div id="header">
             <h1>Know Your Career</h1>
+            <img src="headerpic.jpg"/>
 
         </div>
 
