--- a/Know Your Career App/signup.html
+++ b/Know Your Career App/signup.html
@@ -126,10 +126,10 @@
    		 <br>
 		User Name <input type="text" name = "username" /><br>
 		 <br>
-		Password <input type="text" name = "password"/><br>
+		Password <input type="password" name = "password"/><br>
 		 <br>
 
-    Email <input type="text" name = "email"/><br>
+    Email <input type="email" name = "email"/><br>
                 <br>
 		Gender <input type="radio" name="gender" value = "male"> Male<br>
                      &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="gender" value = "female"> Female<br>
@@ -140,11 +140,13 @@
   				<option type = "checkbox" value="engineer">Engineer</option>
           <option  type = "checkbox" value="computer">Computer Scientist</option>
  				  <option type = "checkbox" value="lawyer">Lawyer</option>
+          <option type = "checkbox" value="lawyer">Lecturer</option>
+          <option type = "checkbox" value="lawyer">Pharmacist</option>
 			  </select>
         <br>
 		 <br>
 
-                Phone <input type="text" name="phone"/><br>
+                Phone <input type="number" name="phone"/><br>
                 <br>
 
                 Years of experience
